--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:pm2": "pm2 start",
-    "start:prod": "node dist/main",
+    "start:prod": "pm2 start dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
