<fix> docker pm2-runtime
1. docker 에서는 pm2-runtime 으로 실행해야한다.
2. 빌드 파일 수정
3. db 파일까지 연결테스트 필요

--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -10,13 +10,17 @@
 #
 #CMD ["npm", "run", "start"]
 
-FROM diamol/node
+# ====================
 
-ENV TARGET="blog.sixeyed.com"
-ENV method="HEAD"
-ENV INTERVAL="3000"
+#FROM diamol/node
+#
+#ENV TARGET="blog.sixeyed.com"
+#ENV method="HEAD"
+#ENV INTERVAL="3000"
+#
+#WORKDIR /web-ping
+#COPY app.js .
 
-WORKDIR /web-ping
-COPY app.js .
+#CMD ["node", "/web-ping/app.js"]
 
-CMD ["node", "/web-ping/app.js"]
+WORKDIR /usr
