--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "pm2 --name our-trip-back start dist/main.js",
+    "start:pm2": "pm2 --name our-trip-back start dist/main.js",
+    "start:prod": "pm2-runtime dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
