--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^9.0.1",
     "@types/google.maps": "^3.53.6",
     "bcrypt": "^5.1.0",
